[gd_scene load_steps=3 format=3 uid="uid://djdto70udhlem"]

[ext_resource type="Theme" uid="uid://1r65p8sxjs8f" path="res://big_font.tres" id="1_7c8bl"]
[ext_resource type="Script" path="res://Langdocs/prog_54b.gd" id="1_wi73m"]

[node name="Prog54b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wi73m")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 34.0
offset_right = 447.0
offset_bottom = 143.0
theme = ExtResource("1_7c8bl")
text = "Pick 4 numbers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="num1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 143.0
offset_right = 447.0
offset_bottom = 204.0

[node name="num2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 215.0
offset_right = 447.0
offset_bottom = 276.0

[node name="num3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = 289.0
offset_right = 449.0
offset_bottom = 350.0

[node name="num4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = 366.0
offset_right = 449.0
offset_bottom = 427.0

[node name="lblSum" type="Label" parent="."]
layout_mode = 0
offset_left = 575.0
offset_top = 187.0
offset_right = 787.0
offset_bottom = 282.0
theme = ExtResource("1_7c8bl")
text = "Sum:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblAverage" type="Label" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 282.0
offset_right = 788.0
offset_bottom = 377.0
theme = ExtResource("1_7c8bl")
text = "Average:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 108.0
offset_top = 514.0
offset_right = 330.0
offset_bottom = 607.0
theme = ExtResource("1_7c8bl")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 467.0
offset_top = 511.0
offset_right = 689.0
offset_bottom = 604.0
theme = ExtResource("1_7c8bl")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 819.0
offset_top = 509.0
offset_right = 1041.0
offset_bottom = 602.0
theme = ExtResource("1_7c8bl")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
